--- a/mak_feedback/templates/facilities.html
+++ b/mak_feedback/templates/facilities.html
@@ -187,11 +187,11 @@
              <div class="form-group">
               <label for="inputReviewExperience">Are you pleased with the facilities of the campus?</label>
               <div class="form-check">
-                  <input class="form-check-input" type="radio" name="one" id="radioExperience1" value="yes">
+                  <input class="form-check-input" type="radio" name="facilityQuery" id="radioExperience1" value="yes">
                   <label class="form-check-label" for="radioExperience1">yes</label>
               </div>
               <div class="form-check">
-                  <input class="form-check-input" type="radio" name="one" id="radioExperience2" value="no">
+                  <input class="form-check-input" type="radio" name="facilityQuery" id="radioExperience2" value="no">
                   <label class="form-check-label" for="radioExperience2">no</label>
               </div>
 
@@ -200,64 +200,64 @@
           <div class="form-group">
             <label for="inputReviewExperience">Are you aware of all the facilities in at campus?</label>
             <div class="form-check">
-              <input class="form-check-input" type="radio" name="two" id="radioExperience1" value="yes">
+              <input class="form-check-input" type="radio" name="awareness" id="radioExperience1" value="yes">
               <label class="form-check-label" for="radioExperience1">yes</label>
           </div>
           <div class="form-check">
-              <input class="form-check-input" type="radio" name="two" id="radioExperience2" value="no">
+              <input class="form-check-input" type="radio" name="awareness" id="radioExperience2" value="no">
               <label class="form-check-label" for="radioExperience2">no</label>
           </div>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="two" id="radioExperience2" value="not really">
+            <input class="form-check-input" type="radio" name="awareness" id="radioExperience2" value="not really">
             <label class="form-check-label" for="radioExperience2">not really</label>
         </div>
         </div><br>
         <div class="form-group">
           <label for="inputReviewExperience">How do you often use all the facilities like the Libraries and swimming pool?</label>
           <div class="form-check">
-            <input class="form-check-input" type="radio" name="three" id="radioExperience1" value="regularly">
+            <input class="form-check-input" type="radio" name="facilityUsage" id="radioExperience1" value="regularly">
             <label class="form-check-label" for="radioExperience1">regularly</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="three" id="radioExperience2" value="not regularly">
+            <input class="form-check-input" type="radio" name="facilityUsage" id="radioExperience2" value="not regularly">
             <label class="form-check-label" for="radioExperience2">not regularly</label>
         </div>
       </div><br>
       <div class="form-group">
         <label for="inputReviewExperience">How is/ was the cleaning of the facilities?</label>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="four" id="radioExperience1" value="Excellent">
+            <input class="form-check-input" type="radio" name="cleaning" id="radioExperience1" value="Excellent">
             <label class="form-check-label" for="radioExperience1">Excellent</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="four" id="radioExperience2" value="Good">
+            <input class="form-check-input" type="radio" name="cleaning" id="radioExperience2" value="Good">
             <label class="form-check-label" for="radioExperience2">Good</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="four" id="radioExperience3" value="Average">
+            <input class="form-check-input" type="radio" name="cleaning" id="radioExperience3" value="Average">
             <label class="form-check-label" for="radioExperience3">Average</label>
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="four" id="radioExperience4" value="Needs Improvement">
+            <input class="form-check-input" type="radio" name="cleaning" id="radioExperience4" value="Needs Improvement">
             <label class="form-check-label" for="radioExperience4">Needs Improvement</label>
         </div>
     </div><br>
     <div class="form-group">
       <label for="inputReviewExperience">How would you rate your overall experience of the facilities?</label>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="five" id="radioExperience1" value="Excellent">
+          <input class="form-check-input" type="radio" name="rating" id="radioExperience1" value="Excellent">
           <label class="form-check-label" for="radioExperience1">Excellent</label>
       </div>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="five" id="radioExperience2" value="Good">
+          <input class="form-check-input" type="radio" name="rating" id="radioExperience2" value="Good">
           <label class="form-check-label" for="radioExperience2">Good</label>
       </div>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="five" id="radioExperience3" value="Average">
+          <input class="form-check-input" type="radio" name="rating" id="radioExperience3" value="Average">
           <label class="form-check-label" for="radioExperience3">Average</label>
       </div>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="five" id="radioExperience4" value="Needs Improvement">
+          <input class="form-check-input" type="radio" name="rating" id="radioExperience4" value="Needs Improvement">
           <label class="form-check-label" for="radioExperience4">Needs Improvement</label>
       </div>
       
