--- a/mak_feedback/templates/responses.html
+++ b/mak_feedback/templates/responses.html
@@ -143,6 +143,11 @@
                   <p>Instructor unit: {{ inst.course_unit }}</p>
                   <p>Course code: {{ inst.course_code }}</p>
                   <p>Course instructor: {{ inst.course_instructor }}</p>
+                  <p>Learning environment: {{ inst.learning_environment }}</p>
+                  <p>Student engagement: {{ inst.students_engagement }}</p>
+                  <p>Student support: {{ inst.students_support }}</p>
+                  <p>Lecturer response: {{ inst.lecturer_response }}</p>
+                  <p>Overall experience: {{ inst.overall_experience }}</p>
                   <p>Argument:</p>
                   <p>{{ inst.argument }}</p>
                   <center><a href="deletei/{{ inst.id }}"><button style="background-color:red; color: whitesmoke; border-radius:5px;">delete</button></a></center>
