--- a/mak_feedback/templates/about.html
+++ b/mak_feedback/templates/about.html
@@ -71,7 +71,7 @@
         about their educational experiences at Makerere University. We believe that your feedback is crucial in improving
         the quality of education and enhancing the learning environment for all students.
               </p>
-              <a href="#" class="about-btn">About us <i class="bx bx-chevron-right"></i></a>
+              
             </div>
           </div>
           <div class="col-xl-7 d-flex align-items-stretch">
@@ -113,6 +113,7 @@
                     <li>Kabenge Isham - Team Lead</li>
                     <li>Mukisa Vaniah Christian- Project Lead</li>
                 </ul>
+                <center><a href="team" class="about-btn"> <i class="bx bx-chevron-right"></i></a></center>
                 </div>
                 <div class="col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
                   <i class="bx bx-shield"></i>
