--- a/mak_feedback/templates/courses.html
+++ b/mak_feedback/templates/courses.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Courses</title>
+    <title>Mak-feedback</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -49,110 +49,103 @@
 
   <body>
     {% include 'header.html'%}
-
     <!-- Page Header Start -->
     <div class="container-fluid page-header mb-5 py-5">
       <div class="">
         <h1 class="display-3 text-white mb-4 animated slideInDown text-center">
-          Comment On Your Courses
+          How do you find the university's instructors
         </h1>
         <nav aria-label="breadcrumb animated slideInDown"></nav>
       </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Booking Start -->
-    <div
-      class="container position-relative wow fadeInUp"
-      data-wow-delay="0.1s"
-      style="margin-top: -6rem"
-    >
-    
-      <div class="row justify-content-center">
-        <div class="col-lg-8">
-        
+    <!-- Service Start -->
 
+    <!-- Service End -->
 
+  <!-- ... (other HTML code) ... -->
+
+<!-- Booking Start -->
+<div class="container position-relative wow fadeInUp" data-wow-delay="0.1s" style="margin-top: -6rem">
+  <div class="row justify-content-center">
+      <div class="col-lg-8">
           <div class="bg-light p-5">
-            {% for message in messages %}
-            <p style="color:crimson;" >{{message}}</p>
-            {% endfor %}
-            <form
-              action="courses"
-              method="post"
-              enctype="multipart/form-data"
-            >
-            {% csrf_token %}
-              <div class="row">
-                <div class="col">
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="fname"
-                    placeholder="First name"
-                  />
-                </div>
-                <div class="col">
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="lname"
-                    placeholder="Last name"
-                  />
-                </div>
-              </div>
-              <br />
-
-              <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label"
-                  >Student number</label
-                >
-                <div class="col-sm-10">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="inputEmail3"
-                    name="student_number"
-                    placeholder="Student number"
-                  />
-                </div>
-              </div>
-              <br />
-              <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label"
-                  >Registration number</label
-                >
-                <div class="col-sm-10">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="inputPassword3"
-                    name="registration_number"
-                    placeholder="Registration number"
-                  />
-                </div>
-              </div>
-              <br />
-              <fieldset class="form-group">
-                <div class="row">
-                  <legend class="col-form-label col-sm-2 pt-0">Level</legend>
-                  <div class="col-sm-10">
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="post graduate" checked>
-                      <label class="form-check-label" for="gridRadios1">
-                        Post graduate
-                      </label>
+              {% for message in messages %}
+              <p style="color: crimson;">{{message}}</p>
+              {% endfor %}
+              <form action="instructors" method="post" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  <div class="row">
+                    <div class="col">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="fname"
+                        placeholder="First name"
+                      />
                     </div>
-                    <div class="form-check">
-                      <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="under graduate">
-                      <label class="form-check-label" for="gridRadios2">
-                        Undergraduate
-                      </label>
+                    <div class="col">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="lname"
+                        placeholder="Last name"
+                      />
+                    </div>
                   </div>
-                </div>
-            
-              </fieldset>
-              <br>
+                  <br />
+    
+                  <div class="form-group row">
+                    <label for="inputEmail3" class="col-sm-2 col-form-label"
+                      >Student number</label
+                    >
+                    <div class="col-sm-10">
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="inputEmail3"
+                        name="student_number"
+                        placeholder="Student number"
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <div class="form-group row">
+                    <label for="inputPassword3" class="col-sm-2 col-form-label"
+                      >Registration number</label
+                    >
+                    <div class="col-sm-10">
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="inputPassword3"
+                        name="registration_number"
+                        placeholder="Registration number"
+                      />
+                    </div>
+                  </div>
+                  <br />
+                  <fieldset class="form-group">
+                    <div class="row">
+                      <legend class="col-form-label col-sm-2 pt-0">Level</legend>
+                      <div class="col-sm-10">
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="post graduate" checked>
+                          <label class="form-check-label" for="gridRadios1">
+                            Post graduate
+                          </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="under graduate">
+                          <label class="form-check-label" for="gridRadios2">
+                            Undergraduate
+                          </label>
+                      </div>
+                    </div>
+                
+                  </fieldset>
+                  <br>
               <div class="form-group row">
                 <label for="inputCity">College</label>
                 <select class="form-control" name ="college" id="inputCity">
@@ -170,44 +163,133 @@
                 <label for="inputCity">Your Program</label>
                 <input type="text" class="form-control" name ="program" id="inputCity">
               </div>
-             
-              <br>
-              <div class="form-group row">
-                <label for="inputCity">Course Unit</label>
-                <input type="text" class="form-control" name ="course_unit" id="inputCity">
-              </div>
-              <br>
-              <div class="form-group ">
-                <label for="inputCity">Course code</label>
-                <input type="text" class="form-control" name ="code" id="inputCity">
-              </div>
-              <br>
-              <div class="form-group ">
-                <label for="inputCity">Course Instructor</label>
-                <input type="text" class="form-control" name ="instructor" id="inputCity">
-              </div>
+                  <!-- Add other personal info fields as needed -->
 
-              <br>
+                  <!-- Course and Instructor Review Questions -->
+                  <div class="form-group">
+                      <label for="inputCourseUnit">Course Unit</label>
+                      <input type="text" class="form-control" name="course_unit" id="inputCourseUnit">
+                  </div>
+                  <div class="form-group">
+                      <label for="inputCourseCode">Course Code</label>
+                      <input type="text" class="form-control" name="code" id="inputCourseCode">
+                  </div>
+                  <div class="form-group">
+                      <label for="inputInstructor">Course Instructor</label>
+                      <input type="text" class="form-control" name="instructor" id="inputInstructor">
+                  </div>
 
+                  <!-- Review Questions -->
+                  <div class="form-group">
+                      <label for="inputReviewExperience">Rate your level of engagement with iin the course unit :</label>
+                      <div class="form-check">
+                          <input class="form-check-input" type="radio" name="engagement" id="radioExperience1" value="Very low">
+                          <label class="form-check-label" for="radioExperience1">Very low</label>
+                      
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="engagement" id="radioExperience1" value="Low">
+                        <label class="form-check-label" for="radioExperience1">Low</label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="engagemnt" id="radioExperience1" value="Moderate">
+                        <label class="form-check-label" for="radioExperience1">Moderate</label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="engagement" id="radioExperience1" value="High">
+                        <label class="form-check-label" for="radioExperience1">High</label>
+                      </div>
+                      
+
+                      
+                  </div><br>
+        
+                <div class="form-group">
+                  <label for="inputReviewExperience">Did the the course unit adequately cover a variety of topics within the subject matter?</label>
+                  <div class="form-check">
+                    <input class="form-check-input" type="radio" name="variety" id="radioExperience1" value="Not at all">
+                    <label class="form-check-label" for="radioExperience1">Not at all</label> 
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="variety" id="radioExperience1" value="To a small extent">
+                    <label class="form-check-label" for="radioExperience1">To a small extent</label>
+              </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="variety" id="radioExperience1" value="Somewhat">
+                    <label class="form-check-label" for="radioExperience1">Somewhat</label>
+              </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="variety" id="radioExperience1" value="Toa greater extent">
+                  <label class="form-check-label" for="radioExperience1">To a greater extent</label>
+              </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="variety" id="radioExperience1" value="Fully">
+                  <label class="form-check-label" for="radioExperience1">Fully</label>
+                </div>
+              </div><br>
               <div class="form-group">
-                <label for="exampleFormControlTextarea1">Your argument</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" name ="description" rows="3"></textarea>
+                <label for="inputReviewExperience">How effective were the lecturers assesements?</label>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="assesement" id="radioExperience1" value="Excellent">
+                    <label class="form-check-label" for="radioExperience1">Excellent</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="assesement" id="radioExperience2" value="Good">
+                    <label class="form-check-label" for="radioExperience2">Good</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="assesement" id="radioExperience3" value="Average">
+                    <label class="form-check-label" for="radioExperience3">Average</label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="assesement" id="radioExperience4" value="Needs Improvement">
+                    <label class="form-check-label" for="radioExperience4">Needs Improvement</label>
+                </div>
+            </div><br>
+            <div class="form-group">
+              <label for="inputReviewExperience">Would you recommend the course unit to other students?</label>
+              <div class="form-check">
+                  <input class="form-check-input" type="radio" name="recommend" id="radioExperience1" value="Excellent">
+                  <label class="form-check-label" for="radioExperience1">Excellent</label>
               </div>
-              <br>
+              <div class="form-check">
+                  <input class="form-check-input" type="radio" name="recommend" id="radioExperience2" value="Good">
+                  <label class="form-check-label" for="radioExperience2">Good</label>
+              </div>
+              <div class="form-check">
+                  <input class="form-check-input" type="radio" name="recommend" id="radioExperience3" value="Average">
+                  <label class="form-check-label" for="radioExperience3">Average</label>
+              </div>
+              <div class="form-check">
+                  <input class="form-check-input" type="radio" name="recommend" id="radioExperience4" value="Needs Improvement">
+                  <label class="form-check-label" for="radioExperience4">Needs Improvement</label>
+              </div>
+              
+          </div><br>
+           
 
+                  <!-- Add other review questions with similar radio button structure -->
 
-              <button type="submit" class="btn btn-primary" onclick="return confirm('Are you sure you want to publish this form?')">Submit form </button>
-
-
-            
-
-
-            </form>
+                  <!-- Your Argument -->
+                  <div class="form-group">
+                      <label for="inputDescription">Your Argument</label><br><br>
+                      <textarea class="form-control" id="inputDescription" name="description" rows="3"></textarea>
+                  </div><br>
+                  <button type="submit" class="btn btn-primary" onclick="return confirm('Are you sure you want to publish this form?')">Submit Form</button>
+              </form>
           </div>
-        </div>
       </div>
-    </div>
-    <!-- Booking End -->
+  </div>
+</div>
+<!-- Booking End -->
+
+<!-- ... (other HTML code) ... -->
+
+
+<!-- ... (other HTML code) ... -->
+
+
+    
 
     {% include 'footer.html'%}
 
@@ -224,6 +306,6 @@
     <script src="{% static '/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js' %}"></script>
 
     <!-- Template Javascript -->
-    <script src="{% static '/js/main.js' %}"></script>
+    <script src="{% static '/js/main.js' %}"> </script>
   </body>
 </html>
