--- a/mak_feedback/templates/courses.html
+++ b/mak_feedback/templates/courses.html
@@ -50,7 +50,7 @@
   <body>
     {% include 'header.html'%}
     <!-- Page Header Start -->
-    <div class="container-fluid page-header mb-5 py-5">
+    <div class="container-fluid page-header mb-5 py-5"><br><br><br>
       <div class="">
         <h1 class="display-3 text-white mb-4 animated slideInDown text-center">
           How do you find the university's instructors
@@ -149,7 +149,7 @@
               <div class="form-group row">
                 <label for="inputCity">College</label>
                 <select class="form-control" name ="college" id="inputCity">
-                  <option value="COSIS" >COSIS</option>
+                  <option value="COCIS" >COSIS</option>
                   <option value="CONAS" >CONAS</option>
                   <option value="COBAMS" >COBAMS</option>
                   <option value="CEES" >CEES</option>
@@ -282,6 +282,7 @@
   </div>
 </div>
 <!-- Booking End -->
+<br><br><br>
 
 <!-- ... (other HTML code) ... -->
 
