--- a/mak_feedback/templates/instructors.html
+++ b/mak_feedback/templates/instructors.html
@@ -70,7 +70,7 @@
 <div class="container position-relative wow fadeInUp" data-wow-delay="0.1s" style="margin-top: -6rem">
   <div class="row justify-content-center">
       <div class="col-lg-8">
-          <div class="bg-light p-5">
+          <div class="bg-light p-5"><br><br><br>
               {% for message in messages %}
               <p style="color: crimson;">{{message}}</p>
               {% endfor %}
@@ -149,7 +149,7 @@
               <div class="form-group row">
                 <label for="inputCity">College</label>
                 <select class="form-control" name ="college" id="inputCity">
-                  <option value="COSIS" >COSIS</option>
+                  <option value="COSIS" >COCIS</option>
                   <option value="CONAS" >CONAS</option>
                   <option value="COBAMS" >COBAMS</option>
                   <option value="CEES" >CEES</option>
@@ -270,6 +270,7 @@
   </div>
 </div>
 <!-- Booking End -->
+<br><br><br>
 
 <!-- ... (other HTML code) ... -->
 
